Move window in separate folder Remove glad library

--- a/BroEngine.vcxproj
+++ b/BroEngine.vcxproj
@@ -137,12 +137,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="src\graphics\Window.cpp" />
+    <ClCompile Include="src\graphics\window\Window.cpp" />
+    <ClCompile Include="src\graphics\window\window_callbacks.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\graphics\Window.h" />
+    <ClInclude Include="src\graphics\window\Window.h" />
+    <ClInclude Include="src\graphics\window\window_callbacks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
