--- a/BroEngine.vcxproj
+++ b/BroEngine.vcxproj
@@ -139,10 +139,12 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="src\graphics\window\Window.cpp" />
+    <ClCompile Include="src\graphics\window\WindowProperties.cpp" />
     <ClCompile Include="src\graphics\window\window_callbacks.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\graphics\window\Window.h" />
+    <ClInclude Include="src\graphics\window\WindowProperties.h" />
     <ClInclude Include="src\graphics\window\window_callbacks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
