--- a/BroEngine.vcxproj
+++ b/BroEngine.vcxproj
@@ -142,14 +142,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="src\graphics\window\Window.cpp" />
-    <ClCompile Include="src\graphics\window\WindowProperties.cpp" />
-    <ClCompile Include="src\graphics\window\window_callbacks.cpp" />
+    <ClCompile Include="src\core\Engine.cpp" />
+    <ClCompile Include="src\core\graphics\window\Window.cpp" />
+    <ClCompile Include="src\core\graphics\window\WindowProperties.cpp" />
+    <ClCompile Include="src\core\graphics\window\window_callbacks.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\graphics\window\Window.h" />
-    <ClInclude Include="src\graphics\window\WindowProperties.h" />
-    <ClInclude Include="src\graphics\window\window_callbacks.h" />
+    <ClInclude Include="src\core\Engine.h" />
+    <ClInclude Include="src\core\graphics\window\Window.h" />
+    <ClInclude Include="src\core\graphics\window\WindowProperties.h" />
+    <ClInclude Include="src\core\graphics\window\window_callbacks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
