--- a/BroEngine.vcxproj
+++ b/BroEngine.vcxproj
@@ -141,6 +141,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\core\input\Input.cpp" />
+    <ClCompile Include="src\core\camera\camera_input.cpp" />
+    <ClCompile Include="src\core\camera\camera.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="src\core\Engine.cpp" />
     <ClCompile Include="src\core\graphics\window\Window.cpp" />
@@ -148,6 +151,9 @@
     <ClCompile Include="src\core\graphics\window\window_callbacks.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\core\input\Input.h" />
+    <ClInclude Include="src\core\camera\camera_input.h" />
+    <ClInclude Include="src\core\camera\camera.h" />
     <ClInclude Include="src\core\Engine.h" />
     <ClInclude Include="src\core\graphics\window\Window.h" />
     <ClInclude Include="src\core\graphics\window\WindowProperties.h" />
