--- a/BroEngine.vcxproj.filters
+++ b/BroEngine.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\core\graphics\buffres\EBO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Libraries\lib\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\graphics\window\Window.h">
