--- a/BroEngine.vcxproj
+++ b/BroEngine.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="src\core\graphics\buffres\VAO.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\core\importer\Mesh.h" />
     <ClInclude Include="src\core\graphics\buffres\EBO.h" />
     <ClInclude Include="src\core\graphics\shaders\ShaderClass.h" />
@@ -185,6 +186,9 @@
   <ItemGroup>
     <None Include="src\core\graphics\shaders\FragmentShader.glsl" />
     <None Include="src\core\graphics\shaders\VertexShader.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="BroEngine.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
