--- a/BroEngine.vcxproj
+++ b/BroEngine.vcxproj
@@ -152,6 +152,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Libraries\lib\glad.c" />
+    <ClCompile Include="src\core\importer\Material.cpp" />
+    <ClCompile Include="src\core\importer\Model.cpp" />
+    <ClCompile Include="src\core\importer\Scene.cpp" />
     <ClCompile Include="src\core\importer\Mesh.cpp" />
     <ClCompile Include="src\core\graphics\buffres\EBO.cpp" />
     <ClCompile Include="src\core\graphics\shaders\ShaderClass.cpp" />
@@ -167,7 +170,10 @@
     <ClCompile Include="src\core\graphics\buffres\VAO.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\core\importer\Material.h" />
+    <ClInclude Include="src\core\importer\Model.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\core\importer\Scene.h" />
     <ClInclude Include="src\core\importer\Mesh.h" />
     <ClInclude Include="src\core\graphics\buffres\EBO.h" />
     <ClInclude Include="src\core\graphics\shaders\ShaderClass.h" />
